create dynamic routing with service and provider and injector

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,6 +9,7 @@
   <a routerLink="#">Groups</a>
   <a routerLink="#">Local News</a>
   <a routerLink="#">Lost + Found</a>
+  <a routerLink="#">Pets</a>
 </div>
 <div class="module">
   <a routerLink="personals">Personls</a>
