'filter by category' pipe not currently working

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
   <a routerLink="#">Pets</a>
 </div>
 <div class="module">
-  <a routerLink="personals">Personls</a>
+  <a routerLink="personals">Personals</a>
   <a routerLink="#">Strictly Platonic</a>
   <a routerLink="#">Women seeking Women</a>
   <a routerLink="#">Women seeking Men</a>
@@ -36,3 +36,4 @@
   <a routerLink="#">Sublets / Temporary</a>
   <a routerLink="#">Vacation Rentals</a>
 </div>
+<a routerLink="newpost">New Post</a>
