--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -1,5 +1,5 @@
 <h1>Community</h1>
 <a routerLink="/">Home</a>
-<div class="panel panel-default" (click)="goToDetailPage(currentPost)" *ngFor="let currentPost of posts">
+<div class="panel panel-default" (click)="goToDetailPage(currentPost)" *ngFor="let currentPost of posts | async">
   <li>{{currentPost.title}}, {{currentPost.date}}</li>
 </div>
