--- a/src/app/personals/personals.component.html
+++ b/src/app/personals/personals.component.html
@@ -1,5 +1,5 @@
 <h1>Personals</h1>
 <a routerLink="/">Home</a>
-<div class="panel panel-default" (click)="goToDetailPage(currentPost)" *ngFor="let currentPost of masterPostList">
+<div class="panel panel-default" (click)="goToDetailPage(currentPost)" *ngFor="let currentPost of posts | category:categoryToFilter | async">
   <li>{{currentPost.title}}, {{currentPost.date}}</li>
 </div>
