update pipe --- pipe is almost working

--- a/src/app/housing/housing.component.html
+++ b/src/app/housing/housing.component.html
@@ -1,6 +1,8 @@
 <h1>Housing</h1>
 <a routerLink="/">Home</a>
-<div class="panel panel-default" (click)="goToDetailPage(currentPost)" *ngFor="let currentPost of posts | category:filterByCategory | async">
-  <li>{{currentPost.title}}, {{currentPost.date}}</li>
-  <li>{{currentPost.$key}}</li>
+<div class="panel panel-default" (click)="goToDetailPage(currentPost)" *ngFor="let currentPost of posts | async">
+  <div *ngIf="currentPost | category:categoryToFilter">
+    <li>{{currentPost.title}}, {{currentPost.date}}</li>
+    <li>{{currentPost.$key}}</li>
+  </div>
 </div>
